[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/login.gd" type="Script" id=1]
[ext_resource path="res://resources/title_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://sprites/placeholder_city.jpg" type="Texture" id=3]
[ext_resource path="res://resources/default_font.tres" type="DynamicFont" id=4]

[node name="login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 720.0
margin_bottom = 1280.0

[node name="vbox" type="VBoxContainer" parent="."]
margin_left = 9.0
margin_top = 9.0
margin_right = 291.0
margin_bottom = 524.0
size_flags_horizontal = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 128.0

[node name="title_label" type="Label" parent="vbox"]
margin_right = 702.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 2 )
text = "DLVR"
align = 1
valign = 1
uppercase = true

[node name="img_margin" type="MarginContainer" parent="vbox"]
margin_top = 59.0
margin_right = 702.0
margin_bottom = 459.0

[node name="img" type="TextureRect" parent="vbox/img_margin"]
margin_right = 702.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 400 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="login_label" type="Label" parent="vbox"]
margin_top = 463.0
margin_right = 702.0
margin_bottom = 509.0
custom_fonts/font = ExtResource( 4 )
text = "login"
align = 1
valign = 1

[node name="email_margin" type="MarginContainer" parent="vbox"]
margin_top = 513.0
margin_right = 702.0
margin_bottom = 537.0
rect_min_size = Vector2( 702, 20 )

[node name="email" type="LineEdit" parent="vbox/email_margin"]
margin_right = 702.0
margin_bottom = 24.0
placeholder_text = "email"

[node name="password_margin" type="MarginContainer" parent="vbox"]
margin_top = 541.0
margin_right = 702.0
margin_bottom = 565.0
rect_min_size = Vector2( 702, 20 )

[node name="password" type="LineEdit" parent="vbox/password_margin"]
margin_right = 702.0
margin_bottom = 24.0
secret = true
placeholder_text = "password"

[node name="sign_in" type="Button" parent="vbox"]
margin_top = 569.0
margin_right = 702.0
margin_bottom = 589.0
rect_min_size = Vector2( 702, 0 )
text = "Sign In"
